--- a/index.html
+++ b/index.html
@@ -736,7 +736,8 @@
         <ol class="list-group-inline push-1-4 pad-b-1-4">
             <li><a href="#banners--collections-banner">Collections banner</a></li>
             <li><a href="#banners--main-banners">Main banners</a></li>
-            <li><a href="#banners--product-page">Product page</a></li>
+            <li><a href="#banners--product-page-banner">Product page banner</a></li>
+            <li><a href="#banners--products-collections-page-banner">Products collections page banner</a></li>
         </ol>
       </nav>
   </div>
@@ -895,26 +896,26 @@
           </div>
       </div>
     </div>
-    <div class="pattern-details " id="banners--product-page" style="">
+    <div class="pattern-details " id="banners--product-page-banner" style="">
         <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
-          <h3 class="pattern-name tera push-1-8">Product page</h3>
+          <h3 class="pattern-name tera push-1-8">Product page banner</h3>
             <ul class="list-group-inline gutter absolute pin-cr">
                 <li>
-                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="banners-product-page-code-sample">
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="banners-product-page-banner-code-sample">
                     <i class="icon i-18">
                       <svg><use xlink:href="#icon-code"></use></svg>
                     </i>
                   </button>
                 </li>
                 <li>
-                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="banners/product-page" hidden>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="banners/product-page-banner" hidden>
                     <i class="icon i-18">
                       <svg><use xlink:href="#icon-copy"></use></svg>
                     </i>
                   </button>
                 </li>
                 <li>
-                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/banners/product-page.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/banners/product-page-banner.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
                     <i class="icon i-18">
                       <svg><use xlink:href="#icon-pop-out"></use></svg>
                     </i>
@@ -927,7 +928,7 @@
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
           <div class="resizeable-pattern relative" style="">
             <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
-            <iframe data-src="patterns/banners/product-page.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+            <iframe data-src="patterns/banners/product-page-banner.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
               <div class="resizeable-pattern-length">
                 <div class="resize-handle resize-handle-left" style="">
                   <i class="icon i-18">
@@ -943,14 +944,163 @@
           </div>
         </div>
 
-          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="banners-product-page-code-sample" tabindex="-1">
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="banners-product-page-banner-code-sample" tabindex="-1">
             <div class="pattern-code relative milli island-1-2" style="">
-              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#banners-product-page-code-sample-copy-chunk" hidden>
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#banners-product-page-banner-code-sample-copy-chunk" hidden>
                 <i class="icon i-18">
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="banners-product-page-code-sample-copy-chunk">&lt;div class="products-banner"&gt;
+              <code><pre id="banners-product-page-banner-code-sample-copy-chunk">&lt;div class="product-details"&gt;
+
+  &lt;div class="grid push">
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-2">
+      &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+    &lt;/div>
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-2 island-half">
+      &lt;h6 class="bold push-quarter text-center">VANILLA SWEATER&lt;/h6>
+      &lt;p class="kilo bold text-center">$52&lt;/p>
+      &lt;section class="size">
+        &lt;div class="grid text-center push-none">
+          &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
+            &lt;p class="bold micro push-quarter">SMALL&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
+            &lt;p class="bold micro push-quarter">MEDIUM&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
+            &lt;p class="bold micro push-quarter">LARGE&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
+            &lt;p class="bold micro push-quarter">X-LARGE&lt;/p>
+          &lt;/div>
+        &lt;/div>
+        &lt;div class="grid text-center push-none">
+          &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4">
+            &lt;a class="micro push-quarter grey text-center" href="#">Size Guide&lt;/a>
+          &lt;/div>
+        &lt;/div>
+      &lt;/section>
+      &lt;section class="colour">
+        &lt;div class="grid text-center push-none">
+          &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 pad-top-half">
+            &lt;p class="bold micro push-quarter">BROWN&lt;/p>
+          &lt;/div>
+          &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 pad-top-half">
+            &lt;p class="bold micro push-quarter">WHITE&lt;/p>
+          &lt;/div>
+        &lt;/div>
+      &lt;/section>
+      &lt;section class="quantity">
+        &lt;hr class="pad-top-quarter push-half">
+        &lt;p class="kilo bold text-center push-half">&#xA0; - &#xA0;&#xA0;&#xA0; 1 &#xA0;&#xA0;&#xA0; +&#xA0;&lt;/p>
+        &lt;hr class="push-half">
+        &lt;div class="text-center push">
+          &lt;a class="btn milli bold" href="#">ADD TO CART&lt;/a>
+        &lt;/div>
+      &lt;/section>
+
+      &lt;section class="reviews">
+        &lt;h6 class="bold push-quarter">REVIEWS&lt;/h6>
+        &lt;hr class="push-quarter">
+        &lt;div class="push-double">
+          &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
+          &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
+          &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#full-review"/>&lt;/svg>&lt;/i>
+          &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
+          &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#review-star"/>&lt;/svg>&lt;/i>
+        &lt;/div>
+
+        &lt;section class="description">
+          &lt;h6 class="bold push-quarter">DESCRIPTION&lt;/h6>
+          &lt;hr class="push-quarter">
+          &lt;p class="milli push">Vanilla Sweater made with 78% merino wool and 22% cashmere.&lt;br>Model is seen wearing Size Small.&lt;/p>
+        &lt;/section>
+        &lt;secion class="fabric-care">
+          &lt;h6 class="bold push-quarter">FABRIC CARE&lt;/h6>
+          &lt;hr class="push-quarter">
+          &lt;p class="milli push">Machine Wash cold &lt;br> Dry lay flat&lt;/p>
+        &lt;/secion>
+      &lt;/section>
+    &lt;/div>
+  &lt;/div>
+
+  &lt;section class="recommended">
+    &lt;div class="island-half">
+      &lt;h6 class="bold push-half">YOU MAY ALSO LIKE&lt;/h6>
+      &lt;div class="grid">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-3 island-half">
+          &lt;a href="#">&lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">&lt;/a>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-3 island-half">
+          &lt;a href="#">&lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+        &lt;/a>&lt;/div>
+      &lt;/div>
+    &lt;/div>
+  &lt;/section>
+
+&lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="pattern-details " id="banners--products-collections-page-banner" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Products collections page banner</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="banners-products-collections-page-banner-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="banners/products-collections-page-banner" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/banners/products-collections-page-banner.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/banners/products-collections-page-banner.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="banners-products-collections-page-banner-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#banners-products-collections-page-banner-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="banners-products-collections-page-banner-code-sample-copy-chunk">&lt;div class="products-banner"&gt;
   &lt;div class="grid">
     &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
       &lt;div>
@@ -1153,7 +1303,7 @@
         &lt;h6 class="push-1-2 bold">SIGN IN&lt;/h6>
         &lt;div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
           &lt;h3 class="push-0">
-              &lt;i class="icon 1-32">&lt;svg>&lt;use xlink:href="images/icons.svg#error"/>&lt;/svg>&lt;/i>
+              &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#error"/>&lt;/svg>&lt;/i>
               &lt;span class="icon-label">There are items that require your attention&lt;/span>
             &lt;/h3>
         &lt;/div>
