--- a/patterns/forms/forms.html
+++ b/patterns/forms/forms.html
@@ -24,7 +24,7 @@
           <h6 class="push-1-2 bold">SIGN IN</h6>
           <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
             <h3 class="push-0">
-              <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+              <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#error" /></svg></i>
               <span class="icon-label">There are items that require your attention</span>
             </h3>
           </div>
